update project files

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
   </main>
 
   <footer>
-    © 2025 OurProtector. All rights reserved.
+    © 2025 OurProtector. Semua Berhak Dilindungi.
   </footer>
 
   <script>
