--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
   </main>
 
   <footer>
-    © 2025 OurProtector. All rights reserved.
+    © 2025 OurProtector. Semua Berhak Dilindungi.
   </footer>
 
   <script>
